<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutRider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:longClickable="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MitfahrerApp_Activity" >

        <TextView
            android:id="@+id/tvRider"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.27"
            android:gravity="center_vertical" />

        <LinearLayout
            android:id="@+id/LinearLayoutRides"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.17"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayoutRidesRider"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etRides"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="numberDecimal"
                    android:text="@string/ridesRiderDefault"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutRidesButtons"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnAddRide"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/addRide"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnRemoveRide"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/removeRides"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPriceRider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteRider"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:text="@string/deleteRider"
            android:textSize="12sp" />

</LinearLayout>